# NanoFightingGameRecorder

./: .gitignore  Cargo.toml  ProjectProposal.md  README.md
api/: .env  Cargo.toml  cert.pem  key.pem
api/src/: client_handlers.rs  config.rs  main.rs  models.rs  utils.rs
api/src/tests/: testcases.rs  testcases.txt  tests.rs  testvalues.txt
client_application/: settings.gradle
client_application/app/: build.gradle
client_application/app/src/androidTest/java/client/application/: ExampleInstrumentedTest.java
client_application/app/src/main/: AndroidManifest.xml
client_application/app/src/main/java/client/application/: MainActivity.java
client_application/app/src/main/java/client/application/ui/admins/: AdminsFragment.java  AdminsViewModel.java
client_application/app/src/main/java/client/application/ui/commands/: CommandsFragment.java  CommandsViewModel.java
client_application/app/src/main/java/client/application/ui/connect/: ConnectFragment.java  ConnectViewModel.java
client_application/app/src/main/res/layout/: activity_main.xml  fragment_admins.xml  fragment_commands.xml  fragment_connect.xml
client_application/app/src/main/res/menu/: bottom_nav_menu.xml
client_application/app/src/main/res/navigation/: mobile_navigation.xml
client_application/app/src/main/res/values/: strings.xml  themes.xml
client_application/app/src/main/res/values-night/: themes.xml
client_application/app/src/test/java/client/application/: ExampleUnitTest.java
client_application/gradle/wrapper/: gradle-wrapper.properties
recorder/: Cargo.toml
recorder/src/: lib.rs
(+6 files in other folders)
