[package]
name = "api"
version = "0.1.0"
authors = ["tanner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3.2.0", features = ["openssl"]}
pkg-config = "0.3.19"
openssl-sys = "0.9"
openssl = {version = "0.10"}
actix-identity = "0.3.1"
actix-rt = "1.0"
env_logger = "0.8.3"
serde = { version="1.0.104", features=["derive"] }
dotenv = "0.15.0"
config = "0.10.1"
rand = "0.8.0"
stopwatch = "0.0.7"
